<resources>
    <string name="app_name">Polar Browser</string>
    <string name="official_website">http://backstage.vcllq.com/defaultbrowser.html</string>
    <string name="default_browser_website">http://backstage.vcllq.com/defaultbrowser.html</string>
    <string name="search_input_hint">Search or Enter URL</string>
    <string name="copy">Copy</string>
    <string name="album">Album</string>
    <string name="home_page">Home</string>
    <string name="already_on_home_page">Already on Homepage</string>
    <string name="title">Title</string>
    <string name="toast_tab_limited">No room for new tab</string>
    <string name="network_connect_error">Connection Error. You are not connected to the Internet</string>
    <string name="choose_file">Choose a file</string>
    <string name="play_video_error">Sorry, this video could not be played</string>
    <string name="file_open_ing">Opening...</string>
    <string name="goback">Back</string>
    <string name="history">History</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="earlier">Earlier</string>
    <string name="favorite">Bookmarks</string>
    <string name="add_bookmark_tips">Added to Bookmarks</string>
    <string name="already_add_bookmark_tips">Already exists</string>
    <string name="delete_bookmark_tips">Bookmark Removed</string>
    <string name="history_search_record">Searching Records</string>
    <string name="no_history_search_record">No Searching records</string>
    <string name="no_history_visit_record">No Browsing records</string>
    <string name="go">Go</string>
    <string name="search">Search</string>
    <string name="history_visit">Browsing records</string>
    <string name="history_search">Searching records</string>
    <string name="edittext_empty_tip">Search or Enter URL</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="download_finish">Finished</string>
    <string name="download_waite">Waiting to Download</string>
    <string name="download_error">Download Failed</string>
    <string name="download_pause">Pause Downloading</string>
    <string name="download_start">Start downloading</string>
    <string name="download_manager">Downloads</string>
    <string name="disk_free_size">/%1$s Available</string>
    <string name="disk_used_size">%1$s Used</string>
    <string name="download_task_already_exists">Task already exists. Sure to re-download?</string>
    <string name="download_no_available_space">Insufficient Storage Available</string>
    <string name="download_url_error">This link is not functional anymore.</string>
    <string name="net_changed_when_downloading">You are not connected to Wi-Fi, still want to dowload?</string>
    <string name="file_can_not_open">The file can\'t be opened by any application available</string>
    <string name="name">Name:</string>
    <string name="size">Size:</string>
    <string name="size_unknown">Unknown Size</string>
    <string name="empty_file_name">The filename is empty</string>
    <string name="download_file_name_exists">The filename already exists</string>
    <string name="click_to_see">Click to open</string>
    <string name="net_no_connect">You are not connected to the Internet</string>
    <string name="download_status_downloading">Downloading</string>
    <string name="download_status_waiting">Waiting to download</string>
    <string name="download_status_start">Start downloading</string>
    <string name="download_status_start_nonetwork">No internet connection，downloading paused！</string>
    <string name="download_status_pause">Downloading Paused</string>
    <string name="download_status_pauseing">Pause</string>
    <string name="download_status_failure">Download Failed</string>
    <string name="download_edit_name_hint">Name</string>
    <string name="download_set_path_default">Path unusable. The file has been downloaded to default storage path</string>
    <string name="extract_view_now">Check now</string>
    <string name="edit">Edit</string>
    <string name="popup_edit">Edit</string>
    <string name="complete">Done</string>
    <string name="delete">Delete</string>
    <string name="extract">Extract</string>
    <string name="delete_with_count">Delete (%1$d)</string>
    <string name="check_all">All</string>
    <string name="check_all_cancel">Cancel</string>
    <string name="delete_checked_task">Delete (%1$d)task(s) that you selected?</string>
    <string name="delete_not_select">Please select items that you want to delete</string>
    <string name="never_remind">No more reminding</string>
    <string name="loading">Loading...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="tips">Notice</string>
    <string name="tips_alert">Notice</string>
    <string name="update_tips">Introduction</string>
    <string name="update_ok">Update Now</string>
    <string name="update_cancel">Cancel</string>
    <string name="go_download">Download</string>
    <string name="manually_update_ok">OK</string>
    <string name="manually_update_cancel">Cancel</string>
    <string name="history_clean_content">Do you want to delete all selected items?</string>
    <string name="history_clean_visited">Do you want to clear all your browsing history?</string>
    <string name="history_clean_searched">Do you want to clear all your searching record?</string>
    <string name="bookmark_delete_content">Do you want to delete all selected items?</string>
    <string name="delete_with_files">Delete source file too</string>
    <string name="play_cancel">Cancel</string>
    <string name="play_continue">Play</string>
    <string name="play_network_gprs_tip">No WiFi, use GPRS to play?</string>
    <string name="menu_add_favorite">Add Bookmark</string>
    <string name="menu_history">History</string>
    <string name="menu_favorite">Bookmarks</string>
    <string name="menu_download">Downloads</string>
    <string name="menu_nightmode">Night</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_no_imgmode">No Image</string>
    <string name="menu_web_mode">PC Mode</string>
    <string name="menu_exit">Quit</string>
    <string name="menu_add_shortcut">Home Screen</string>
    <string name="menu_add_logo">Speed Dial</string>
    <string name="add_to">Add to</string>
    <string name="edit_url">Edit URL</string>
    <string name="add_shortcut_successful">Succeed</string>
    <string name="already_add_shortcut_successful">Shortcut already exists</string>
    <string name="add_shortcut_failed">Your device does not support this feature</string>
    <string name="add_logo_empty_tip">Name or URL is empty</string>
    <string name="add_logo_checke_empty_tip">Please select where to add the wabpage</string>
    <string name="setting">Settings</string>
    <string name="location">Location</string>
    <string name="setting_saved_account">Save passwords</string>
    <string name="setting_search_engine">Search Engine</string>
    <string name="version">Version</string>
    <string name="setting_search_engine_google">Google</string>
    <string name="setting_search_engine_bing">Bing</string>
    <string name="setting_search_engine_yahoo">Yahoo</string>
    <string name="setting_search_engine_yandex">Yandex</string>
    <string name="setting_search_engine_duckgo">DuckDuckGo</string>
    <string name="setting_search_engine_youtube">Youtube</string>
    <string name="setting_search_engine_google_quick">Google Quicksearch</string>
    <string name="setting_font_size">Font Size</string>
    <string name="setting_font_size_min">Small</string>
    <string name="setting_font_size_mid">Medium</string>
    <string name="setting_font_size_big">Large</string>
    <string name="setting_font_size_large">Extra large</string>
    <string name="setting_sliding_type">Sliding Preferences</string>
    <string name="setting_sliding_type_close">No Sliding</string>
    <string name="setting_sliding_type_border">Edge Sliding</string>
    <string name="setting_sliding_type_fullscreen">Full Screen Sliding</string>
    <string name="setting_sliding_type_tip">You can set sliding preference in settings!</string>
    <string name="setting_editlogo_type_tip">No room for more icons in home page. Tap and hold to edit.</string>
    <string name="setting_videodownload_type_tip">Do you want to install an add-on to download videos from websites?</string>
    <string name="setting_editlogo_type_ok">OK</string>
    <string name="setting_plug_center">Add-ons</string>
    <string name="setting_save_tab">Save Tabs on Exit</string>
    <string name="setting_screen_lock">Portrait Orientation Lock</string>
    <string name="setting_ad_block">Block Ads</string>
    <string name="setting_ad_block_tips">Remind ads blocked</string>
    <string name="setting_full_screen">Full Screen</string>
    <string name="setting_quick_search">Quick Search</string>
    <string name="setting_clear_data">Clear Data</string>
    <string name="setting_set_default_browser">Set Polar Browser as default</string>
    <string name="setting_download_path">Default Path</string>
    <string name="setting_custom_ua">User Agent</string>
    <string name="setting_recover_setting">Back to Default Settings</string>
    <string name="file_opening">Opening...</string>
    <string name="recover_setting_content">Are you sure you want to back to default settings?</string>
    <string name="setting_clear_data_exit">Clear Browsing History on Exit</string>
    <string name="setting_clear_default_success">Successfully Cleared</string>
    <string name="setting_clear_default_failed">Clearing Failed</string>
    <string name="setting_default_failed">Setting failed</string>
    <string name="setting_default_self_tip">Do you wish to stop using Polar Browser as default?</string>
    <string name="setting_remember_username_and_password_tip">Do you want to save your password for \"%1$s\"?</string>
    <string name="saved_account">Save passwords</string>
    <string name="file_child_count">%1$d items</string>
    <string name="current_download_folder">Stored in: %1$s</string>
    <string name="download_folder_space">%1$s left, %2$s in total</string>
    <string name="download_folder_alert_19">For systems beyond Android 4.4 (included), files need to be stored in certain directories when using SD card. The files downloaded will be deleted if the browser is uninstalled. Continue to store in SD card?</string>
    <string name="download_folder_phone">Internal Storage</string>
    <string name="download_folder_sd">SD Card</string>
    <string name="download_folder_sd_removed">SD Card has been removed</string>
    <string name="download_folder_selected_sd">You\'ve selected SD card</string>
    <string name="module_manager">Module Manager</string>
    <string name="module_logos">Navigating Icons</string>
    <string name="module_news">News</string>
    <string name="module_navigate">Frequently Visited Sites</string>
    <string name="module_tools">Tools</string>
    <string name="start_to_set">Start</string>
    <string name="feedback">Feedback</string>
    <string name="custom_ua_default">Android</string>
    <string name="export_bookmarks">Export Bookmarks</string>
    <string name="dialog_ssl_title">Security warning</string>
    <string name="notification">Notification</string>
    <string name="setting_download_manager">Download Settings</string>
    <string name="setting_product_about">Help</string>
    <string name="setting_about">About</string>
    <string name="download_file_path">Save address</string>
    <string name="download_file_property">File attribute</string>
    <string name="download_file_size">File size</string>
    <string name="file_date_added">Time</string>
    <string name="download_with_godownloader_tip"><u>300% faster</u></string>
    <string name="camera">Camera</string>
    <string name="visited_card_title">Most visited</string>
</resources>