<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/tv_select_gallery"
        style="@style/dialog_select_photo"
        android:text="@string/album"/>

    <View
        style="@style/line_SettingActivityItem"/>

    <TextView
        android:id="@+id/tv_select_camera"
        style="@style/dialog_select_photo"
        android:text="@string/camera" />

    <View
        style="@style/line_SettingActivityItem"/>

    <View
        style="@style/space_SettingActivityItem"/>

    <TextView
        android:id="@+id/tv_select_cancel"
        style="@style/dialog_select_photo"
        android:text="@string/cancel" />

</LinearLayout>