<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <com.polar.browser.common.ui.CommonTitleBar
        android:layout_width="match_parent"
        android:text = "@string/download_file_property"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="14dp"
        android:text="@string/download_edit_name_hint"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:textColor="#888888"
        android:textIsSelectable="true"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="14dp"
        android:text="@string/download_file_size"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_file_size"
        android:layout_width="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#888888"
        android:textIsSelectable="true"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="14dp"
        android:text="@string/download_file_path"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_file_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:textIsSelectable="true"
        android:textColor="#888888"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="14dp"
        android:text="@string/file_date_added"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_file_download_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:textIsSelectable="true"
        android:textColor="#888888"
        android:textSize="14sp"/>

</LinearLayout>