<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/download_dialog"
    android:layout_width="@dimen/download_dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/common_dialog_shape">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/download_dialog_Tvtitle_height">

        <TextView
            android:id="@+id/tv_title"
            style="@style/DownLoadDialog_tv_title"
            android:text="@string/download"
            />

        <TextView
            android:id="@+id/tv_godownload_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawablePadding="6dp"
            android:text="@string/download_with_godownloader_tip"
            android:textColor="#12b7f5"
            android:textSize="13sp"
            android:visibility="gone" />

        <View
            style="@style/TitleLineView"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rl_name"
        android:layout_alignStart="@+id/rl_name"
        android:layout_below="@+id/rl_name"
        android:layout_marginTop="@dimen/second_tv_margin_top"
        android:text="@string/size"
        android:textColor="@color/black54"
        android:textSize="15sp" />


    <View
        android:id="@+id/line_view"
        style="@style/TitleLineView"
        android:layout_below="@id/tv_size"
        android:layout_marginTop="@dimen/download_dialog_margin_left" />

    <LinearLayout
        android:id="@+id/rl_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/download_dialog_btn_height"
        android:layout_below="@id/line_view"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/DownLoadDialog_cancel_btn"
            android:text="@string/cancel" />


        <ImageView
            style="@style/DownLoadDialog_vertical_Ivline" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/DownLoadDialog_OK_btn"
            android:text="@string/download" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_marginLeft="@dimen/download_dialog_margin_left"
        android:layout_marginRight="@dimen/download_dialog_margin_right">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/frist_edit_margin_top"
            android:background="@drawable/input_bg_selector"
            android:hint="@string/download_edit_name_hint"
            android:imeOptions="flagNoExtractUi|actionGo"
            android:inputType="textNoSuggestions"
            android:paddingBottom="@dimen/frist_edit_margin_bottom"
            android:singleLine="true"
            android:textColor="@color/set_about"
            android:textColorHint="#aaa"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/file_list_textsize_16" />
    </RelativeLayout>


</RelativeLayout>